--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "my-template",
+  "name": "memes-guide",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -9,19 +10,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.2.4",
+    "@heroicons/react": "^2.2.0",
+    "@heroui/card": "^2.2.16",
+    "@heroui/image": "^2.2.10",
+    "@heroui/navbar": "^2.2.15",
+    "@heroui/react": "^2.8.0-beta.1",
+    "framer-motion": "^12.7.3",
+    "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.4",
-    "eslint-config-prettier": "^10.1.1",
+    "eslint-config-next": "15.3.0",
+    "eslint-config-prettier": "^10.1.2",
+    "postcss": "^8.5.3",
     "prettier": "^3.5.3",
+    "tailwindcss": "^4.1.4",
     "typescript": "^5"
   }
 }
